name:                lucid
version:             1.0
synopsis:            Clear to write, read and edit DSL for HTML
description:         Clear to write, read and edit DSL for HTML. See the 'Lucid' module
                     for description and documentation.
homepage:            https://github.com/chrisdone/lucid
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2014 Chris Done
category:            Web
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Lucid
                     Lucid.Base
                     Lucid.Html5
                     Lucid.Bootstrap
  other-modules:     Lucid.Example
                     Lucid.Example2
  build-depends:     base >= 4 && <5
                   , blaze-builder
                   , bytestring
                   , mtl
                   , text
                   , transformers
                   , unordered-containers
