name:                lucid
version:             2.9.12
synopsis:            Clear to write, read and edit DSL for HTML
description:
  Clear to write, read and edit DSL for HTML.
  .
  * Names are consistent, and do not conflict with base or are keywords (all have suffix @_@)
  .
  * Same combinator can be used for attributes and elements (e.g. 'style_')
  .
  * For more, read <https://chrisdone.com/posts/lucid the blog post>
  .
  See the "Lucid" module for more documentation.
homepage:            https://github.com/chrisdone/lucid
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com, oleg.grenrus@iki.fi
copyright:           2014-2017 Chris Done
category:            Web
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md, CHANGELOG.md
tested-with:         GHC==7.10.3,GHC==8.0.2,GHC==8.2.2,GHC==8.4.4,GHC==8.6.5, GHC==8.8.1

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Lucid
                     Lucid.Base
                     Lucid.Html5
                     Lucid.Bootstrap

  -- GHC boot libraries
  build-depends:     base                   >=4.8      && <4.14
                   , bytestring             >=0.10.6.0
                   , containers             >=0.5.6.2
                   , transformers           >=0.4.2.0

  -- GHC boot libraries since 8.4.
  build-depends:     mtl                    >=2.2
                   , text                   >=1.2.0.2

  -- compat packages
  if !impl(ghc >= 8.0)
    build-depends:   semigroups            >=0.16.1

  -- other dependencies
  build-depends:     blaze-builder         >=0.4.0.0
                   , hashable              >=1.2.3.2
                   , mmorph                >=1.0.3
                   , unordered-containers  >=0.2.5.1

test-suite test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    other-modules: Example1
    build-depends: base,
                   lucid,
                   HUnit,
                   hspec,
                   parsec,
                   bifunctors,
                   text,
                   mtl

benchmark bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmarks
  main-is:          Main.hs
  other-modules:    HtmlBenchmarks
  build-depends:    base,
                    deepseq,
                    criterion,
                    blaze-builder,
                    text,
                    bytestring,
                    lucid
  ghc-options:      -O2

benchmark bench-io
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmarks
  main-is:          IO.hs
  build-depends:    base,
                    criterion,
                    transformers,
                    text,
                    lucid
  ghc-options:      -O2
