name:                lucid2
version:             0.0.20220509
synopsis:            Clear to write, read and edit DSL for HTML
description:
  Clear to write, read and edit DSL for HTML.
  .
  * Names are consistent, and do not conflict with base or are keywords (all have suffix @_@)
  .
  * Same combinator can be used for attributes and elements (e.g. 'style_')
  .
  * For more, read <https://chrisdone.com/posts/lucid the blog post>
  .
  See the "Lucid" module for more documentation.
  .
  This package is the newer version of lucid.
homepage:            https://github.com/chrisdone/lucid
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          lucid2@chrisdone.com
copyright:           2014-2022 Chris Done
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md, CHANGELOG.md

library
  default-language:  Haskell2010
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Lucid
                     Lucid.Base
                     Lucid.Html5

  -- GHC boot libraries
  build-depends:     base          >= 4.8 && < 4.17
                   , bytestring    >= 0.10.12.0
                   , containers    >= 0.6.5.1
                   , transformers  >= 0.5.6.2
                   , mtl           >= 2.2.2
                   , text          >= 1.2.4.1

  -- other dependencies
  build-depends:     blaze-builder

source-repository head
  type:     git
  location: https://github.com/chrisdone/lucid.git

test-suite test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-depends: base,
                   lucid2,
                   HUnit,
                   hspec,
                   parsec,
                   bifunctors,
                   text,
                   mtl
